--- a/Ultimate_ToolBox/Ultimate_ToolBox/Ultimate_ToolBox.csproj
+++ b/Ultimate_ToolBox/Ultimate_ToolBox/Ultimate_ToolBox.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2B9828BF-6BB9-4748-865C-1CADD7FB5A28}</ProjectGuid>
+    <ProjectGuid>{105E9EE9-C9D3-4ADB-B99F-6CD1F2BB9B2C}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Project_Word_Matser</RootNamespace>
-    <AssemblyName>Project_Word_Matser</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <RootNamespace>Ultimate_ToolBox</RootNamespace>
+    <AssemblyName>Ultimate_ToolBox</AssemblyName>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
@@ -43,10 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GC.cs" />
     <Compile Include="LanguagePacks.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ThemePacks.cs" />
+    <Compile Include="RMCreator.cs" />
     <Compile Include="WordList.cs" />
   </ItemGroup>
   <ItemGroup>
